# prp-embedded-lecture

./: .gitignore  CMakeLists.txt
include/: Robot.h  Socket.h  UDPSocket.h
src/: Robot.cpp  UDPSocket.cpp  main.cpp
test/: CMakeLists.txt  robotTests.cpp  udpSocketTests.cpp
